--- a/app/src/main/res/layout/fragment_creation.xml
+++ b/app/src/main/res/layout/fragment_creation.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/creation_image"
+            android:id="@+id/item_image"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="20dp"
@@ -29,9 +29,9 @@
             android:layout_marginEnd="20dp"
             android:src="@drawable/ic_box"
             android:background="@color/transparent"
-            app:layout_constraintEnd_toStartOf="@id/creation_image"
-            app:layout_constraintTop_toTopOf="@id/creation_image"
-            app:layout_constraintBottom_toBottomOf="@id/creation_image"/>
+            app:layout_constraintEnd_toStartOf="@id/item_image"
+            app:layout_constraintTop_toTopOf="@id/item_image"
+            app:layout_constraintBottom_toBottomOf="@id/item_image"/>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/select_image_button"
@@ -40,32 +40,33 @@
             android:layout_marginStart="20dp"
             android:src="@drawable/ic_image"
             android:background="@color/transparent"
-            app:layout_constraintStart_toEndOf="@id/creation_image"
-            app:layout_constraintTop_toTopOf="@id/creation_image"
-            app:layout_constraintBottom_toBottomOf="@id/creation_image"/>
+            app:layout_constraintStart_toEndOf="@id/item_image"
+            app:layout_constraintTop_toTopOf="@id/item_image"
+            app:layout_constraintBottom_toBottomOf="@id/item_image"/>
 
-        <include
-            android:id="@+id/creation_layout"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/input_fields_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="0dp"
+            app:cardElevation="0dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/creation_image"
-            layout="@layout/card_creation"/>
+            app:layout_constraintTop_toBottomOf="@id/item_image">
 
-        <include
-            android:id="@+id/entity_creation_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/creation_layout"
-            layout="@layout/card_creation"/>
+            <LinearLayout
+                android:id="@+id/input_fields_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"/>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <Button
-            android:id="@+id/saveButton"
+            android:id="@+id/confirm_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/entity_creation_layout"/>
+            app:layout_constraintTop_toBottomOf="@id/input_fields_card_view"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
