--- a/app/src/main/res/layout/fragment_page_cart.xml
+++ b/app/src/main/res/layout/fragment_page_cart.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/go_to_cart_cardview"/>
+        app:layout_constraintBottom_toTopOf="@id/bottom_card"/>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/go_to_cart_cardview"
+        android:id="@+id/bottom_card"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent">
