feat: initial order page

--- a/app/src/main/res/layout/card_sale_filter.xml
+++ b/app/src/main/res/layout/card_sale_filter.xml
@@ -22,7 +22,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
-            android:src="@drawable/ic_search"
+            android:src="@drawable/ic_bloom"
             android:background="@color/lighter_grey"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
